--- a/Templates/AutoGuard.html
+++ b/Templates/AutoGuard.html
@@ -206,7 +206,7 @@
         }
     </style>
 </head>
-<body>
+<body class="container-fluid">
     <header>
         <nav>
             <div class="nav-list">
